{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 209,
  "lineage": "a30b5f3c-dada-5dd4-4b68-49cd8b57c3a0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:vpc/vpc-00d6be1c5a16dee04",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c44f703696b493a3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ebeab00159a27693",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d6be1c5a16dee04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b40e47a8b4cf09f0",
            "owner_id": "058264261029"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241002014404566600000002/1bdb87199bfabba9-20241002014422020300000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241002014404566600000002/1bdb87199bfabba9",
            "target_id": "arn:aws:lambda:us-west-2:058264261029:function:my-lambda1"
          },
          "dependencies": [
            "aws_lambda_permission.with_lb",
            "aws_sqs_queue.lambda_dlq",
            "data.aws_vpc.default",
            "module.alb.aws_lb_target_group.this",
            "module.lambda_function_alb.aws_cloudwatch_log_group.lambda",
            "module.lambda_function_alb.aws_iam_policy.additional_inline",
            "module.lambda_function_alb.aws_iam_policy.additional_json",
            "module.lambda_function_alb.aws_iam_policy.additional_jsons",
            "module.lambda_function_alb.aws_iam_policy.async",
            "module.lambda_function_alb.aws_iam_policy.dead_letter",
            "module.lambda_function_alb.aws_iam_policy.logs",
            "module.lambda_function_alb.aws_iam_policy.tracing",
            "module.lambda_function_alb.aws_iam_policy.vpc",
            "module.lambda_function_alb.aws_iam_role.lambda",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.additional_inline",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.additional_json",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.additional_jsons",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.additional_many",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.additional_one",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.async",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.dead_letter",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.logs",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.tracing",
            "module.lambda_function_alb.aws_iam_role_policy_attachment.vpc",
            "module.lambda_function_alb.aws_lambda_function.this",
            "module.lambda_function_alb.aws_s3_object.lambda_package",
            "module.lambda_function_alb.data.aws_arn.log_group_arn",
            "module.lambda_function_alb.data.aws_cloudwatch_log_group.lambda",
            "module.lambda_function_alb.data.aws_iam_policy.tracing",
            "module.lambda_function_alb.data.aws_iam_policy.vpc",
            "module.lambda_function_alb.data.aws_iam_policy_document.additional_inline",
            "module.lambda_function_alb.data.aws_iam_policy_document.assume_role",
            "module.lambda_function_alb.data.aws_iam_policy_document.async",
            "module.lambda_function_alb.data.aws_iam_policy_document.dead_letter",
            "module.lambda_function_alb.data.aws_iam_policy_document.logs",
            "module.lambda_function_alb.data.aws_partition.current",
            "module.lambda_function_alb.data.external.archive_prepare",
            "module.lambda_function_alb.local_file.archive_plan",
            "module.lambda_function_alb.null_resource.archive"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/sap-dev-alb/6266a0afeb663a8b",
            "arn_suffix": "app/sap-dev-alb/6266a0afeb663a8b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sap-dev-alb-625894450.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/sap-dev-alb/6266a0afeb663a8b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sap-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-032425aa2127d8848"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06179db4d691f8fee"
              },
              {
                "subnet_id": "subnet-08c209262ecd86433"
              },
              {
                "subnet_id": "subnet-0a734a279778830f1"
              },
              {
                "subnet_id": "subnet-0e6a3da57968010a4"
              }
            ],
            "subnets": [
              "subnet-06179db4d691f8fee",
              "subnet-08c209262ecd86433",
              "subnet-0a734a279778830f1",
              "subnet-0e6a3da57968010a4"
            ],
            "tags": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-00d6be1c5a16dee04",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.default",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my-http-listener",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:listener/app/sap-dev-alb/6266a0afeb663a8b/edd0db7fc9ed23a3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241002014404566600000002/1bdb87199bfabba9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:listener/app/sap-dev-alb/6266a0afeb663a8b/edd0db7fc9ed23a3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/sap-dev-alb/6266a0afeb663a8b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public_subnets",
            "data.aws_vpc.default",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mytg1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241002014404566600000002/1bdb87199bfabba9",
            "arn_suffix": "targetgroup/mytg1-20241002014404566600000002/1bdb87199bfabba9",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:058264261029:targetgroup/mytg1-20241002014404566600000002/1bdb87199bfabba9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:058264261029:loadbalancer/app/sap-dev-alb/6266a0afeb663a8b"
            ],
            "load_balancing_cross_zone_enabled": "false",
            "name": "mytg1-20241002014404566600000002",
            "name_prefix": "mytg1-",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
              }
            ],
            "tags": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                  }
                ],
                "unhealthy_state_routing": [
                  {
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "lambda"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:security-group/sg-032425aa2127d8848",
            "description": "Security group for sap-dev-alb application load balancer",
            "egress": [],
            "id": "sg-032425aa2127d8848",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS web traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sap-dev-alb-20241002014404565000000001",
            "name_prefix": "sap-dev-alb-",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d6be1c5a16dee04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:security-group-rule/sgr-0b18218e1f90a99a0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP web traffic",
            "from_port": 80,
            "id": "sgr-0b18218e1f90a99a0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-032425aa2127d8848",
            "security_group_rule_id": "sgr-0b18218e1f90a99a0",
            "tags": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_security_group.this"
          ]
        },
        {
          "index_key": "all_https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264261029:security-group-rule/sgr-0c6eae597f1f03939",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS web traffic",
            "from_port": 443,
            "id": "sgr-0c6eae597f1f03939",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-032425aa2127d8848",
            "security_group_rule_id": "sgr-0c6eae597f1f03939",
            "tags": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.alb.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}